Schema-Aenderungserkennung fertigt
TODO: Schema-Funktionsaufruf machen
TODO: Java8 Array - Funktionenen debuggen

--- a/bat/FglUGAKI-SRV_copy_local.properties
+++ b/bat/FglUGAKI-SRV_copy_local.properties
@@ -7,23 +7,29 @@
 #########################################################################
 
 # Format: Verzeichnis\Dateiname = Zielverzeichnis
-C:\VMWare\FGLW2KDominoR6_fgl01\VM_FGLWin2k_DominoR6Fgl01.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLW7UgakiSrv02VM\VM_FGLWin7_Ugaki02Srv_Installationen.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLW7UgakiSrvVM\VM_FGLWin7_Ugaki-SRV.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPDominoR9Fgl07_768MB\VM_FGLWinXP_DominoR9Fgl07.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPDominoR85_fgl03\VM_FGLWinXP_DominoR85Fgl03.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPDominoR853Fgl05_768MB\VM_FGLWinXP_DominoR853Fgl05.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalDEV03_2048M\VM_FGLWinXP_HannibalDEV03.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalDEV05_768MB\VM_FGLWinXP_HannibalDEV05.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalDEV07_768MB\VM_FGLWinXP_HannibalDEV07.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalDEV09_2048M\VM_FGLWinXP_HannibalDEV09.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalDEV11_2048M\VM_FGLWinXP_HannibalDEV11.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalDEV13_2048M\VM_FGLWinXP_HannibalDEV13.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalDEV15_2048M\VM_FGLWinXP_HannibalDEV15.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalSRV_GIT\VM_FGLWinXP_HannibalSRVGit.txt=C:\1fgl\repository\Projekt_VMD\vmd
+# TODO: Vorangestellt das "schema, z.B. vmd://" dadurch mitteilen, dass an den Namen der Hostname angehängt werden soll _UGAKI-SRV
+#       Das unterscheidet das Schema von z.B. copy:// , bei dem einfach nur der Dateiname 1:1 kopiert wird.
+C:\VMWare\FGLXPHannibalDEV03_2048M\VM_FGLWinXp_HANNIBALDEV03VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalDEV05_768MB\VM_FGLWinXP_HANNIBALDEV05VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalDEV07_768MB\VM_FGLWinXP_HANNIBALDEV07VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalDEV09_2048M\VM_FGLWinXP_HANNIBALDEV09VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
+
+#Noch zu überarbeiten
+C:\VMWare\FGLW2KDominoR6_fgl01\VM_FGLWin2k_DOMINOR6FGL01.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLW7UgakiSrv02VM\VM_FGLWin7_UGAKI02SRV.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLW7UgakiSrvVM\VM_FGLWin7_UGAKI-SRV.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPDominoR9Fgl07_768MB\VM_FGLWinXP_DOMINOR9FGL07.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPDominoR85_fgl03\VM_FGLWinXP_DOMINOR85FGL03.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPDominoR853Fgl05_768MB\VM_FGLWinXP_DOMINOR853FGL05.txt=C:\1fgl\repository\Projekt_VMD\vmd
+
+
+C:\VMWare\FGLXPHannibalDEV11_2048M\VM_FGLWinXP_HANNIBALDEV11.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalDEV13_2048M\VM_FGLWinXP_HANNIBALDEV13.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalDEV15_2048M\VM_FGLWinXP_HANNIBALDEV15.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalSRV_GIT\VM_FGLWinXP_HANNIBALSRVGit.txt=C:\1fgl\repository\Projekt_VMD\vmd
 C:\VMWare\FGLXPHannibalSRV_SVN\VM_FGLWinXP_zKernelSrvSvnVM - als FGLXPHannibalSRVSvn.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalSRV_TOM\VM_FGLWinXP_HannibalSRVTom.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPLastSrv01VM_768M\VM_FGLWinXP_LastSrv01.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPNotesR8RCP_DEV\VM_FGLWinXP_NotesR8RCP_DEV.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPVideoEdit\VM_FGLWinXP_VideoEdit.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPXMLBeans\VM_FGLWinXP_XMLBeans.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalSRV_TOM\VM_FGLWinXP_HANNIBALSRVTOM.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPLastSrv01VM_768M\VM_FGLWinXP_LASTSRV01.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPNotesR8RCP_DEV\VM_FGLWinXP_NOTESR8RCP_DEV.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPVideoEdit\VM_FGLWinXP_VIDEOEDIT.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPXMLBeans\VM_FGLWinXP_XMLBEANS.txt=C:\1fgl\repository\Projekt_VMD\vmd
