--- a/bat/test_vmd.properties
+++ b/bat/test_vmd.properties
@@ -67,9 +67,9 @@
 #C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp\file_copyBeispiel02renamed.txt
 
 # Teste den Schema-Controller, zunächst der Wechsel von einem Schema zu einem Anderen
-vmd://das ist ein Schemawechseltest
-vmd://test2
-copy://test4
-copy://teste5
+vmd://das ist das erste Schema
+vmd://testeZeile2
+copy://das ist ein Schemawechseltest
+copy://teste Zeile 4 
 
 
