--- a/bat/project_UGAKI-SRV_vmd.properties
+++ b/bat/project_UGAKI-SRV_vmd.properties
@@ -4,7 +4,10 @@ test1=einTestWert
 #TEST auf Wert gleich Name: 
 #project.vmd.dirRepositoryPath=${project.vmd.dirRepositoryPath}
 
-#project.vmd.operation_mode=test
+#Wenn der operation mode auf TEST ist, wird eine andere properties Datei ausgewaehlt
+project.vmd.operation_mode=test
+
+
 #Merke: Einfacher Backslash wird von Ant so nicht erkannt. Darum hier Slash verwenden
 project.vmd.dirRepositoryPath=C:/1fgl/repository/Projekt_VMD
 project.vmd.dirPathClientFgl=C:/1fgl/client
