Schma Beahndlung in der Steuerungsdatei: Struktur fertig
Schema Funktionsgeruest fertig.
Schema vmd fertig.

TODO:
FGLCopyLocal_Main um Paramter erweitern, der Steuert, ob der Hostname
als Suffix an die Datei kommen soll.
Java8 Array Funktionen Debuggen/Ausprobieren

TODO Schemata:
copy, zip, remove

--- a/bat/test_vmd.properties
+++ b/bat/test_vmd.properties
@@ -80,7 +80,6 @@
 # TODO: Einen Löschtask entwickeln und diesen vorher einsetzen, damit die Datei auch wirklich rechts nicht existiert.
 vmd://C:\1fgl\repository\Projekt_VMD\testused=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel00.txt
 vmd://C:\1fgl\repository\Projekt_VMD\testused=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel01.txt
-#vmd://C:\1fgl\repository\Projekt_VMD\testused=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel02.txt
 
 # Format: Dateipfad = nicht existierendes Zielverzeichnis # Merke: Nicht existierende Verzeichnisse werden automatisch durch ant erstellt.
 # TODO: Einen Löschtask entwickeln und diesen vorher einsetzen, damit das Verzeichnis rechts auch wirklich nicht existiert.
@@ -93,7 +92,8 @@ copy://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp
 
 # Format: Dateipfad = Zieldateipfad und die Datei umbenennen
 # Kopiertest FF:
-vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel00.txt=C:\temp\file_copyBeispiel00renamed.txt
+#vmd://C:\1fgl\repository\Projekt_VMD\testused=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel02.txt
+#vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel00.txt=C:\temp\file_copyBeispiel00renamed.txt
 #vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp\file_copyBeispiel01renamed.txt
 #C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp\file_copyBeispiel02renamed.txt
 
