--- a/bat/project_PATTON-PRV_vmd.properties
+++ b/bat/project_PATTON-PRV_vmd.properties
@@ -5,7 +5,7 @@ test1=einTestWert
 #project.vmd.dirRepositoryPath=${project.vmd.dirRepositoryPath}
 
 #Wenn der operation mode auf TEST ist, wird eine andere properties Datei ausgewaehlt
-project.vmd.operation_mode=test
+#project.vmd.operation_mode=test
 
 #Merke: Einfacher Backslash wird von Ant so nicht erkannt. Darum hier Slash verwenden
 #project.vmd.dirRepositoryPath=C:/1fgl/repository/Projekt_VMD
