--- a/bat/test_vmd.properties
+++ b/bat/test_vmd.properties
@@ -93,10 +93,11 @@ copy://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp
 # Format: Dateipfad = Zieldateipfad und die Datei umbenennen
 # Kopiertest FF:
 vmd://C:\1fgl\repository\Projekt_VMD\testused=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel02.txt
+
 vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel00.txt=C:\temp\file_copyBeispiel00renamed.txt
 vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp\file_copyBeispiel01renamed.txt
 vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp\file_copyBeispiel02renamed.txt
 
-copy://C:\1fgl\repository\Projekt_VMD\testused=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel02renamed.txt
+copy://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel02renamed.txt
 
 
