--- a/bat/test_vmd.properties
+++ b/bat/test_vmd.properties
@@ -69,35 +69,37 @@
 ######################################################################
 # 3. Teste den Schema-Controller, 
 # zunächst der Wechsel von einem Schema zu einem Anderen
-#vmd://das ist das erste Schema
-#vmd://testeZeile2
-#copy://das ist ein Schemawechseltest
-#copy://teste Zeile 4 
+##vmd://das ist das erste Schema
+##vmd://testeZeile2
+##copy://das ist ein Schemawechseltest
+##copy://teste Zeile 4 
 
 # Teste Schema-VMD-Controller gegen Dateien
 # Format: Ausgangsverzeichnis = Dateipfad
 # Kopiertest DF: Verzeichnis links - nimm den Dateinamen von rechts. Existierende Datei rechts!
 # TODO: Einen Löschtask entwickeln und diesen vorher einsetzen, damit die Datei auch wirklich rechts nicht existiert.
-vmd://C:\1fgl\repository\Projekt_VMD\testused=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel00.txt
-vmd://C:\1fgl\repository\Projekt_VMD\testused=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel01.txt
+#vmd://C:\1fgl\repository\Projekt_VMD\testused=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel00.txt
+#vmd://C:\1fgl\repository\Projekt_VMD\testused=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel01.txt
 
 # Format: Dateipfad = nicht existierendes Zielverzeichnis # Merke: Nicht existierende Verzeichnisse werden automatisch durch ant erstellt.
 # TODO: Einen Löschtask entwickeln und diesen vorher einsetzen, damit das Verzeichnis rechts auch wirklich nicht existiert.
 # Kopiertest Fd: 
-copy://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp\notexisting\notexistingEbene2
+#copy://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp\notexisting\notexistingEbene2
  
 # Format: Dateipfad = existierendes Zielverzeichnis
 # Kopiertest FD:
-copy://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp
+#copy://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp
 
 # Format: Dateipfad = Zieldateipfad und die Datei umbenennen
 # Kopiertest FF:
-vmd://C:\1fgl\repository\Projekt_VMD\testused=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel02.txt
+#vmd://C:\1fgl\repository\Projekt_VMD\testused=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel02.txt
 
-vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel00.txt=C:\temp\file_copyBeispiel00renamed.txt
-vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp\file_copyBeispiel01renamed.txt
-vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp\file_copyBeispiel02renamed.txt
+#vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel00.txt=C:\temp\file_copyBeispiel00renamed.txt
+#vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp\file_copyBeispiel01renamed.txt
+#vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp\file_copyBeispiel02renamed.txt
 
-copy://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel02renamed.txt
+#copy://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel02renamed.txt
 
+
+del://C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel02renamed.txt
 
