DeleteFileSingle - einfachste Grundversion fertiggestellt
TODO: In einer Zeile mehrere Dateipfade mit Semikolon trennen
TODO: Wildcard Löschung

--- a/bat/test_vmd.properties
+++ b/bat/test_vmd.properties
@@ -99,7 +99,8 @@
 #vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp\file_copyBeispiel02renamed.txt
 
 del://C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel02renamed.txt
-#copy://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel02renamed.txt
+copy://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel02renamed.txt
+
 
 
 
