Wildcard - Loeschung implementiert
TODO: Löschen wenn mehrere Schema Einträge hintereinander folgen.

--- a/bat/test_vmd.properties
+++ b/bat/test_vmd.properties
@@ -94,12 +94,13 @@
 # Kopiertest FF:
 #vmd://C:\1fgl\repository\Projekt_VMD\testused=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel02.txt
 
-#vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel00.txt=C:\temp\file_copyBeispiel00renamed.txt
-#vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp\file_copyBeispiel01renamed.txt
-#vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp\file_copyBeispiel02renamed.txt
+del://C:\temp\Project_VMD\testused
+#vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel00.txt=C:\temp\Project_VMD\testused\file_copyBeispiel00renamed.txt
+#vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp\Project_VMD\testused\file_copyBeispiel01renamed.txt
+#vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp\Project_VMD\testused\file_copyBeispiel02renamed.txt
 
 del://C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel02renamed.txt
-copy://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel02renamed.txt
+#copy://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel02renamed.txt
 
 
 
