--- a/bat/test_vmd.properties
+++ b/bat/test_vmd.properties
@@ -85,11 +85,11 @@
 # TODO: Einen Löschtask entwickeln und diesen vorher einsetzen, damit das Verzeichnis rechts auch wirklich nicht existiert.
 # Kopiertest Fd: 
 del://C:\temp\Projekt_VMD\testused02
-#copy://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp\Projekt_VMD\testused02
+copy://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp\Projekt_VMD\testused02
  
 # Format: Dateipfad = existierendes Zielverzeichnis
 # Kopiertest FD:
-#copy://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp\Projekt_VMD\testused02
+copy://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp\Projekt_VMD\testused02
 
 # Format: Dateipfad = Zieldateipfad und die Datei umbenennen
 # Kopiertest FF:
