--- a/bat/test_vmd.properties
+++ b/bat/test_vmd.properties
@@ -84,24 +84,24 @@
 # Format: Dateipfad = nicht existierendes Zielverzeichnis # Merke: Nicht existierende Verzeichnisse werden automatisch durch ant erstellt.
 # TODO: Einen Löschtask entwickeln und diesen vorher einsetzen, damit das Verzeichnis rechts auch wirklich nicht existiert.
 # Kopiertest Fd: 
-del://C:\temp\Projekt_VMD\testused02
-#copy://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp\Projekt_VMD\testused02
+#del://C:\temp\Projekt_VMD\testused02
+copy://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp\Projekt_VMD\testused02
  
 # Format: Dateipfad = existierendes Zielverzeichnis
 # Kopiertest FD:
-#copy://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp\Projekt_VMD\testused02
+copy://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp\Projekt_VMD\testused02
 
 # Format: Dateipfad = Zieldateipfad und die Datei umbenennen
 # Kopiertest FF:
-#vmd://C:\1fgl\repository\Projekt_VMD\testused=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel02.txt
+vmd://C:\1fgl\repository\Projekt_VMD\testused=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel02.txt
 
-del://C:\temp\Projekt_VMD\testused
-#vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel00.txt=C:\temp\Projekt_VMD\testused\file_copyBeispiel00renamed.txt
-#vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp\Projekt_VMD\testused\file_copyBeispiel01renamed.txt
-#vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp\Projekt_VMD\testused\file_copyBeispiel02renamed.txt
+#del://C:\temp\Projekt_VMD\testused
+vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel00.txt=C:\temp\Projekt_VMD\testused\file_copyBeispiel00renamed.txt
+vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp\Projekt_VMD\testused\file_copyBeispiel01renamed.txt
+vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp\Projekt_VMD\testused\file_copyBeispiel02renamed.txt
 
-del://C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel02renamed.txt
-#copy://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel02renamed.txt
+#del://C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel02renamed.txt
+copy://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel02renamed.txt
 
 
 
