--- a/bat/test_vmd.properties
+++ b/bat/test_vmd.properties
@@ -81,27 +81,29 @@
 #vmd://C:\1fgl\repository\Projekt_VMD\testused=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel00.txt
 #vmd://C:\1fgl\repository\Projekt_VMD\testused=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel01.txt
 
+# Einen Löschtask vorher einsetzen, damit das Verzeichnis rechts auch wirklich nicht existiert.
+# Loeschtest: Nicht nur Verzeichns 'a' loeschen, sondern auch das leere Unterverzeichnis testused02 ebenfalls loeschen.
+del://C:\temp\Projekt_VMD\testused02\a
+
 # Format: Dateipfad = nicht existierendes Zielverzeichnis # Merke: Nicht existierende Verzeichnisse werden automatisch durch ant erstellt.
-# TODO: Einen Löschtask entwickeln und diesen vorher einsetzen, damit das Verzeichnis rechts auch wirklich nicht existiert.
 # Kopiertest Fd: 
-#del://C:\temp\Projekt_VMD\testused02
-copy://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp\Projekt_VMD\testused02
+#copy://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp\Projekt_VMD\testused02\a
  
 # Format: Dateipfad = existierendes Zielverzeichnis
 # Kopiertest FD:
-copy://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp\Projekt_VMD\testused02
+#copy://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp\Projekt_VMD\testused02\a
 
 # Format: Dateipfad = Zieldateipfad und die Datei umbenennen
 # Kopiertest FF:
-vmd://C:\1fgl\repository\Projekt_VMD\testused=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel02.txt
+#vmd://C:\1fgl\repository\Projekt_VMD\testused=C:\temp\Projekt_VMD\testused02\file_copyBeispiel02.txt
 
 #del://C:\temp\Projekt_VMD\testused
-vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel00.txt=C:\temp\Projekt_VMD\testused\file_copyBeispiel00renamed.txt
-vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp\Projekt_VMD\testused\file_copyBeispiel01renamed.txt
-vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp\Projekt_VMD\testused\file_copyBeispiel02renamed.txt
+#vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel00.txt=C:\temp\Projekt_VMD\testused\file_copyBeispiel00renamed.txt
+#vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp\Projekt_VMD\testused\file_copyBeispiel01renamed.txt
+#vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp\Projekt_VMD\testused\file_copyBeispiel02renamed.txt
 
-#del://C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel02renamed.txt
-copy://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel02renamed.txt
+#del://C:\temp\Projekt_VMD\\testused02\file_copyBeispiel02renamed.txt
+#copy://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp\Projekt_VMD\\testused02\file_copyBeispiel02renamed.txt
 
 
 
