--- a/bat/test_vmd.properties
+++ b/bat/test_vmd.properties
@@ -24,86 +24,102 @@
 # test1=eins
 
 # Rechter Teil existiert nicht, Datei aber an sich existiert 
-# C:\1fgl\repository\Projekt_VMD\testused\file_existBeispiel01.txt
-# C:\1fgl\repository\Projekt_VMD\testused\file_existBeispiel01.txt=
-
+# C:\1fgl\repository\Projekt_VMD\testused\file_existBeispiel02.txt
+# C:\1fgl\repository\Projekt_VMD\testused\file_existBeispiel02.txt=
 
 ####################################################################
-# 2. Funktioniert:
-# Tests erlaubter Konfigurationen
-
-#Fall: links Verzeichnis, rechts NICHT EXISTIERENDE Datei
-# Kopiertest Df 1. Fall: Existierndes Verzeichnis links - nimm den Dateinamen von rechts. NICHT Existierende Datei rechts, die AUCH im linken Verzeichnis NICHT existiert!
-# Merke: Wenn die Datei nicht existiert, wird das nicht existierende Verzeichnis auch nicht erstellt.
-#C:\1fgl\repository\Projekt_VMD\testused=C:\temp\notexisting\notexistingEbene2\datei_die_nicht_existieren_soll.txt
-
-# Kopiertest: fd
-#C:\1fgl\repository\Projekt_VMD\testused\datei_die_nicht_existieren_soll.txt=C:\temp\notexisting\notexistingEbene2
-
-# Kopiertest: fD
-#C:\1fgl\repository\Projekt_VMD\testused\datei_die_nicht_existieren_soll.txt=C:\1fgl\repository\Projekt_VMD\testused02
-
-
-# Format: Ausgangsverzeichnis = Dateipfad
-# Kopiertest DF: Verzeichnis links - nimm den Dateinamen von rechts. Existierende Datei rechts!
-# TODO: Einen Löschtask entwickeln und diesen vorher einsetzen, damit die Datei auch wirklich rechts nicht existiert.
-#C:\1fgl\repository\Projekt_VMD\testused=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel00.txt
-#C:\1fgl\repository\Projekt_VMD\testused=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel01.txt
-#C:\1fgl\repository\Projekt_VMD\testused=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel02.txt
-
-# Format: Dateipfad = nicht existierendes Zielverzeichnis # Merke: Nicht existierende Verzeichnisse werden automatisch durch ant erstellt.
-# TODO: Einen Löschtask entwickeln und diesen vorher einsetzen, damit das Verzeichnis rechts auch wirklich nicht existiert.
-# Kopiertest Fd: 
-#C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp\notexisting\notexistingEbene2
- 
-# Format: Dateipfad = existierendes Zielverzeichnis
-# Kopiertest FD:
-#C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp
-
-# Format: Dateipfad = Zieldateipfad und die Datei umbenennen
-# Kopiertest FF:
-#C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel00.txt=C:\temp\file_copyBeispiel00renamed.txt
-#C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp\file_copyBeispiel01renamed.txt
-#C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp\file_copyBeispiel02renamed.txt
-
-######################################################################
-# 3. Teste den Schema-Controller, 
+# Teste den Schema-Controller,  
 # zunächst der Wechsel von einem Schema zu einem Anderen
 ##vmd://das ist das erste Schema
 ##vmd://testeZeile2
 ##copy://das ist ein Schemawechseltest
 ##copy://teste Zeile 4 
 
-# Teste Schema-VMD-Controller gegen Dateien
+####################################################################
+### LOESCHTASK (ganze Verzeichnisse) ################################################
+# Löschtask vorher einsetzen, damit die Dateien im Ziel auch wirklich nicht existieren.
+del://C:\temp\Projekt_VMD\testused
+del://C:\temp\Projekt_VMD\testused02
+
+# Loeschtasktest: Er darf nicht meckern, nur weil etwas zu loeschendes nicht (mehr) existiert.
+del://C:\temp\Projekt_VMD\testused02
+del://C:\temp\Projekt_VMD\notnotnotexisting
+
+
+####################################################################
+### TESTUSED ######################################################
+# 2. Funktioniert:
+# Tests erlaubter Konfigurationen
+
+#Fall: links Verzeichnis, rechts NICHT EXISTIERENDE Datei
+# Kopiertest Df 1. Fall: Existierndes Verzeichnis links - nimm den Dateinamen von rechts. NICHT Existierende Datei rechts, die AUCH im linken Verzeichnis NICHT existiert!
+# Merke: Wenn die Datei nicht existiert, wird das nicht existierende Verzeichnis auch nicht erstellt.
+C:\1fgl\repository\Projekt_VMD\testused=C:\temp\Projekt_VMD\notexisting\notexistingEbene2\datei_die_nicht_existieren_soll.txt
+
+# Format: nicht existierendes Ausgangsverzeichnis = nicht existierender Dateipfad
+# Kopiertest: fd
+# TODO GOON 20160419: In diesem Fall darf das Program NICHT abbrechen. Hinweismeldung und diese Zeile nicht verarbeiten.
+C:\1fgl\repository\Projekt_VMD\testused\datei_die_nicht_existieren_soll.txt=C:\temp\Projekt_VMD\notexisting\notexistingEbene2
+
+# Format: nicht existierende Ausgangsdatei = existierender Dateipfad
+# Kopiertest: fD
+# TODO GOON 20160419: In diesem Fall darf das Program NICHT abbrechen. Hinweismeldung und diese Zeile nicht verarbeiten.
+C:\1fgl\repository\Projekt_VMD\testused\datei_die_nicht_existieren_soll.txt=C:\temp\Projekt_VMD\testused
+
 # Format: Ausgangsverzeichnis = Dateipfad
 # Kopiertest DF: Verzeichnis links - nimm den Dateinamen von rechts. Existierende Datei rechts!
 # TODO: Einen Löschtask entwickeln und diesen vorher einsetzen, damit die Datei auch wirklich rechts nicht existiert.
-#vmd://C:\1fgl\repository\Projekt_VMD\testused=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel00.txt
-#vmd://C:\1fgl\repository\Projekt_VMD\testused=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel01.txt
-
-# Einen Löschtask vorher einsetzen, damit das Verzeichnis rechts auch wirklich nicht existiert.
-# Loeschtest: Nicht nur Verzeichns 'a' loeschen, sondern auch das leere Unterverzeichnis testused02 ebenfalls loeschen.
-del://C:\temp\Projekt_VMD\testused02\a
+C:\1fgl\repository\Projekt_VMD\testused=C:\temp\Projekt_VMD\testused\file_copyBeispiel00.txt
+C:\1fgl\repository\Projekt_VMD\testused=C:\temp\Projekt_VMD\testused\file_copyBeispiel01.txt
+C:\1fgl\repository\Projekt_VMD\testused=C:\temp\Projekt_VMD\testused\file_copyBeispiel02.txt
 
 # Format: Dateipfad = nicht existierendes Zielverzeichnis # Merke: Nicht existierende Verzeichnisse werden automatisch durch ant erstellt.
+# TODO: Einen Löschtask entwickeln und diesen vorher einsetzen, damit das Verzeichnis rechts auch wirklich nicht existiert.
 # Kopiertest Fd: 
-#copy://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp\Projekt_VMD\testused02\a
+C:\repository\Projekt_VMD\testused\file_copyBeispiel03.txt=C:\temp\Projekt_VMD\notexisting\notexistingEbene2
  
 # Format: Dateipfad = existierendes Zielverzeichnis
 # Kopiertest FD:
-#copy://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp\Projekt_VMD\testused02\a
+C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel04.txt=C:\temp\Projekt_VMD\testused
 
 # Format: Dateipfad = Zieldateipfad und die Datei umbenennen
 # Kopiertest FF:
-#vmd://C:\1fgl\repository\Projekt_VMD\testused=C:\temp\Projekt_VMD\testused02\file_copyBeispiel02.txt
+C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel05.txt=C:\temp\Projekt_VMD\testused\file_copyBeispiel05renamed.txt
+C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel06.txt=C:\temp\Projekt_VMD\testused\file_copyBeispiel06renamed.txt
+C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel07.txt=C:\temp\Projekt_VMD\testused\file_copyBeispiel07renamed.txt
+
+######################################################################
+### TESTUSED02\a  #######################################################
+# Teste Schema-VMD-Controller gegen Dateien
+# Format: Ausgangsverzeichnis = Dateipfad
+# Kopiertest DF: Verzeichnis links - nimm den Dateinamen von rechts. Existierende Datei rechts!
+#vmd://C:\1fgl\repository\Projekt_VMD\testused=C:\temp\Projekt_VMD\testused02\a\file_copyBeispiel00.txt
+#vmd://C:\1fgl\repository\Projekt_VMD\testused=C:\temp\Projekt_VMD\testused02\a\file_copyBeispiel01.txt
+
+# Einen Löschtask vorher einsetzen, damit das Verzeichnis rechts auch wirklich nicht existiert.
+# Loeschtest: Nicht nur Verzeichns 'a' loeschen, sondern auch das leere Unterverzeichnis testused02 ebenfalls loeschen.
+#             TODO: Die anderen Loeschaktionen dürfen nicht meckern, nur weil das Verzeichnis oder die Dateien nicht mehr vorhanden sind.
+#del://C:\temp\Projekt_VMD\testused02\a
+
+# Format: Dateipfad = nicht existierendes Zielverzeichnis # Merke: Nicht existierende Verzeichnisse werden automatisch durch ant erstellt.
+# Kopiertest Fd: 
+#copy://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp\Projekt_VMD\testused02\a
+ 
+# Format: Dateipfad = existierendes Zielverzeichnis
+# Kopiertest FD:
+#copy://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel03.txt=C:\temp\Projekt_VMD\testused02\a
+
+# Format: Dateipfad = Zieldateipfad und die Datei umbenennen
+# Kopiertest FF:
+#vmd://C:\1fgl\repository\Projekt_VMD\testused=C:\temp\Projekt_VMD\testused02\a\file_copyBeispiel04.txt
 
 #del://C:\temp\Projekt_VMD\testused
-#vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel00.txt=C:\temp\Projekt_VMD\testused\file_copyBeispiel00renamed.txt
-#vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp\Projekt_VMD\testused\file_copyBeispiel01renamed.txt
-#vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp\Projekt_VMD\testused\file_copyBeispiel02renamed.txt
+#vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel05.txt=C:\temp\Projekt_VMD\testused02\a\file_copyBeispiel05renamed.txt
+#vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel06.txt=C:\temp\Projekt_VMD\testused02\a\file_copyBeispiel06renamed.txt
+#vmd://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel07.txt=C:\temp\Projekt_VMD\testused02\a\file_copyBeispiel07renamed.txt
 
-#del://C:\temp\Projekt_VMD\\testused02\file_copyBeispiel02renamed.txt
-#copy://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp\Projekt_VMD\\testused02\file_copyBeispiel02renamed.txt
+#del://C:\temp\Projekt_VMD\\testused02\a\file_copyBeispiel03renamed.txt
+#copy://C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel08.txt=C:\temp\Projekt_VMD\\testused02\a\file_copyBeispiel08renamed.txt
 
 
 
